<resources>
    <string name="app_name">DMIIE</string>
    <string name="user_name">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="total_customer">Customer</string>
    <string name="total_assigned">Assigned</string>
    <string name="followup">Followup</string>
    <string name="closed">closed</string>


    <string name="sales_person">Sales Person</string>
    <string name="customer">Customer</string>
    <string name="Dashboard">DashBoard</string>
    <string name="report">Report</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="submit">Submit</string>


    <string-array name="customer_status">
        <item>Customer Status</item>
        <item>Active</item>
        <item>InActive</item>
    </string-array>

    <string-array name="need_sample">
        <item>Need Sample</item>
        <item>Yes</item>
        <item>No</item>
        <item>N/A</item>
    </string-array>

    <string-array name="need_price_list">
        <item>Need Price List</item>
        <item>Yes</item>
        <item>No</item>
        <item>N/A</item>
    </string-array>

    <string-array name="manual_visit">
        <item>Manual Visit Required</item>
        <item>Yes</item>
        <item>No</item>
        <item>N/A</item>
    </string-array>

    <string-array name="nxt_follow">
        <item>Follow up Status</item>
        <item>Inprogress</item>
        <item>Closed</item>
    </string-array>


</resources>