<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five_dp"
        app:cardCornerRadius="@dimen/five_dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/five_dp"
            >

        <TextView
            android:id="@+id/admin_salesper_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Name"
            />

        <TextView
            android:id="@+id/admin_salesper_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/admin_salesper_name"
            android:text="9999999999"
            android:layout_marginTop="@dimen/five_dp"/>


            <LinearLayout
                android:id="@+id/dashboard_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/admin_salesper_number"
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/five_dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_customer"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_assigned"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/followup"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/closed"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dashboard_tab"
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/five_dp">

                <TextView
                    android:id="@+id/totalCustomerCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="50"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/totalAssignedCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/followCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/closedCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:gravity="center" />

            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>